# orbit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
docs/plans/: 2026-06-01-ui-refresh.md  2026-06-02-session-insights-design.md  2026-06-03-column-filters-design.md  2026-06-03-settings-terminal-design.md  2026-06-04-logo-theme-design.md  2026-06-04-logo-theme.md  2026-06-04-os-dependent-adapter-paths-design.md  2026-06-04-os-dependent-adapter-paths.md  2026-06-04-v0.1-open-source-release-design.md  2026-06-04-v0.1-open-source-release.md  2026-06-06-windows-adapter-discovery-design.md  2026-06-06-windows-adapter-discovery.md  2026-06-10-statistics-dashboards-design.md  2026-06-10-statistics-dashboards.md  2026-06-11-model-statistics-design.md  2026-06-11-model-statistics.md  2026-07-02-release-pipeline-design.md
docs/superpowers/plans/: 2026-05-30-orbit.md  (+3 more)
scripts/: build-linux-appimage.sh  verify-linux-appimage.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  models.rs  shell_quote.rs  statistics.rs  watcher.rs
src-tauri/src/adapters/: antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  jetbrains.rs  kilo.rs  mod.rs  opencode.rs  qoder.rs  warp.rs  zcode.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/indexer/: mod.rs
src/hooks/: useInvoke.ts
src/store/: messageRoles.test.ts  messageRoles.ts  useAppStore.ts
src/types/: index.ts
(+36 files in other folders)
