[package]
name = "orbit"
version = "0.4.0"
description = "A local session browser for AI coding agents"
authors = ["The Darts Co"]
edition = "2021"
license = "MIT"
repository = "https://github.com/TheDartsCo/orbit"
homepage = "https://github.com/TheDartsCo/orbit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.39", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
notify = { version = "8", features = ["macos_kqueue"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
dirs = "6"
prost = "0.14.3"

[dev-dependencies]
tempfile = "3"
